[package]
edition = "2018"
name = "poston"
version = "0.7.1"
authors = ["Takeru Sato <type.in.type@gmail.com>"]
description = "Yet another Fluentd logger for Rust"
documentation = "https://github.com/tkrs/poston"
homepage = "https://github.com/tkrs/poston"
repository = "https://github.com/tkrs/poston.git"
readme = "README.md"
license = "MIT"
keywords = ["fluentd", "fluentd-logger"]
categories = ["network-programming"]

[badges]
circle-ci = { repository = "tkrs/poston" }
maintenance = { status = "experimental" }

[dependencies]
backoff = "0.2"
base64 = "0.12"
crossbeam-channel = "0.4"
log = "0.4"
rmp = "0.8"
rmp-serde = "0.14"
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
pretty_env_logger = "0.4"
lazy_static = "1.4"
rand = "0.7"
