[package]
edition = "2018"
name = "poston"
version = "0.7.5-alpha.0"
authors = ["Takeru Sato <type.in.type@gmail.com>"]
description = "Yet another Fluentd logger for Rust"
documentation = "https://github.com/tkrs/poston"
homepage = "https://github.com/tkrs/poston"
repository = "https://github.com/tkrs/poston.git"
readme = "README.md"
license = "MIT"
keywords = ["fluentd", "fluentd-logger"]
categories = ["network-programming"]

[badges]
circle-ci = { repository = "tkrs/poston" }
maintenance = { status = "experimental" }

[dependencies]
backoff = "0.4"
base64 = "0.13"
crossbeam-channel = "0.5"
log = "0.4"
rmp = "0.8"
rmp-serde = "1.0"
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "1.1", features = ["v4"] }

[dev-dependencies]
pretty_env_logger = "0.4"
lazy_static = "1.4"
rand = "0.8"
