[package]
edition = "2021"
name = "poston"
version = "1.0.0"
authors = ["Takeru Sato <type.in.type@gmail.com>"]
description = "Yet another Fluentd logger for Rust"
documentation = "https://github.com/tkrs/poston"
homepage = "https://github.com/tkrs/poston"
repository = "https://github.com/tkrs/poston.git"
readme = "README.md"
license = "MIT"
keywords = ["fluentd", "fluentd-logger"]
categories = ["network-programming"]

[badges]
circle-ci = { repository = "tkrs/poston" }
maintenance = { status = "experimental" }

[dependencies]
backoff = "0.4"
base64 = "0.22"
crossbeam-channel = "0.5"
log = "0.4"
rmp = "0.8"
rmp-serde = "1.1"
serde = "1.0"
serde_derive = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
pretty_env_logger = "0.5"
once_cell = "1"
rand = "0.8"
